@@ -47,6 +47,7 @@ GNU Make porting efforts:
       Earnie Boyd <earnie@uses.sf.net>
       Troy Runkel <Troy.Runkel@mathworks.com>
       Juan M. Guerrero <juan.guerrero@gmx.de>
+      KO Myung-Hun <komh78@gmail.com>
 
   Port to z/OS by:
       Igor Todorovski <itodorov@ca.ibm.com>
